# Arionum-Miner-GPU-Cryptogone

./: .gitignore  .gitmodules  CMakeLists.txt  FAQ.md  README.md  argon2-gpu.patch  argon2.patch  clean_prj.sh  create_submodules_patch.sh  faq.md  gen_prj.sh  gen_prj_vs2017.sh  install-cuda-ubuntu-16.04.txt  make_release_linux.sh  make_release_win.sh  notes.md  setup_libs.sh  setup_libs_linux.sh  setup_mpir.sh  setup_submodules.sh  setup_vcpkg.sh
argon2/include/: argon2.h
argon2/src/: argon2.c  core.c  core.h  encoding.c  opt.c  ref.c
include/: aro_nonce_provider_pool.h  aro_tools.h  block_type.h  cudaminer.h  main_common.h  miner.h  miner_version.h  minerdata.h  miners_stats.h  minersettings.h  mining_device.h  mining_services.h  mining_system.h  openclminer.h  openclprogramcontext.h  perfscope.h  pool_services.h  simplecudaminer.h  stats.h  testMode.h  test_services.h  to_base64.h  updater.h  win_tools.h
kernels/: argon2_kernel_2id.cl
sample_batch_files/: listDevices_CUDA.bat  listDevices_OpenCL.bat  run_CUDA.bat  run_OpenCL.bat
sample_script_files/: listDevices_CUDA.sh  listDevices_OpenCL.sh  run_CUDA.sh  run_OpenCL.sh
src/arionum-cuda-miner/: main.cpp
src/arionum-opencl-miner/: main.cpp
src/common/: cudaminer.cpp  miner.cpp  minerdata.cpp  minersStats.cpp  miners_stats.cpp  minersettings.cpp  mining_device.cpp  openclminer.cpp  pool_services.cpp  simplecudaminer.cpp  stats.cpp  testMode.cpp  test_services.cpp  timer.cpp  updater.cpp  win_tools.cpp
src/simple-cuda/: main.cpp
src/test/: main.cpp
